Fix naming, javadocs and remove traces of addressbook